--- a/Onlineshop/templates/admin/user.html
+++ b/Onlineshop/templates/admin/user.html
@@ -150,16 +150,13 @@
                     <a href="{% url 'user' %}">Хэрэглэгч</a>
                 </li>
                 <li>
-                    <a href="{% url 'a' %}">Хүсэлт</a>
-                </li>
-                <li>
-                    <a href="{% url 'category' %}">Зарын төрөл</a> 
+                    <a href="{% url 'request' %}">Хүсэлт</a>
                 </li>
                 <li>
                     <a href="{% url 'zar' %}">Зарууд</a>
                 </li>
                 <li>
-                    <a href="{% url 'a' %}">Чиргүүл</a>
+                    <a href="{% url 'add_news' %}">Мэдээ</a>
                 </li>
             </ul>
         </nav>
