--- a/Onlineshop/templates/cart.html
+++ b/Onlineshop/templates/cart.html
@@ -13,7 +13,7 @@
 <div class="card">
 {% if not cart_items %}
 <div class="text-center">
-<h3 style='color:rgb(216, 64, 90);'>Одоогоор ирсэн мэдэгдэл байхгүй байна.</h3>
+<h3 style='color:rgb(216, 64, 90);'>Одоогоор ирсэн зар байхгүй байна.</h3>
 <br>
 </div>
 {% else %}
