--- a/Onlineshop/templates/layout/header.html
+++ b/Onlineshop/templates/layout/header.html
@@ -117,7 +117,7 @@ $(document).ready(function() {
 					</div>
 					{%endif%}
 					<a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
-						<div class="icon icon-sm rounded-circle border"><i class="fa fa-bell"></i></div>
+						<div class="icon icon-sm rounded-circle border"><i class="fa fa-heart"></i></div>
 						<span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
 					</a>
 				</div> <!-- widgets-wrap.// -->
