--- a/Onlineshop/templates/product-detail.html
+++ b/Onlineshop/templates/product-detail.html
@@ -109,11 +109,30 @@
 										<span class="close" onclick="closeModal()">&times;</span>
 										<div class="news" id="part1">
 											<h3 style="margin-top: 1%;">1. Жолоочийн мэдээлэл</h3>
-											<form method="post" action="{% url 'product_detail' category_slug=single_product.category.slug product_slug=single_product.slug %}" enctype="multipart/form-data">
+											<form method="post" enctype="multipart/form-data">
 												{% csrf_token %}
-												{{ driver_form.as_p }}
-												{{ trailer_form.as_p }}
-												{{ trailer_file_form.as_p }}
+												<label>Овог Нэр</label>
+												<input type="text" name="dname" class="input" placeholder="Овог нэрээ оруулна уу?">
+												<label>Үнэмлэхний хүчинтэй хугацаа</label>
+												<input type="text" name="dpassport" class="input" placeholder="Эхлэсэн болон дуусах хугацаа оруулна уу?">
+												<label>Лиценз дугаар</label>
+												<input type="text" name="dletsence" class="input" placeholder="Үнэмлэхний ард байрлах License number">
+												<label>Иргэний үнэмлэхний зураг</label>
+												<input type="file" id="myFile" name="dimg" class="image">
+
+												<h3 style="margin-top: 8%;">2. Чиргүүлний мэдээлэл</h3>
+												<label>Регистр дугаар</label>
+												<input type="text" name="crd" class="input" placeholder="РД оруулна уу?">
+												<label>Тээврийн хэрэгслийн төрөл</label>
+												<input type="text" name="ctype" class="input" placeholder="Эзэмшдэг тээврийн хэрэгслийн төрөлийг бичнэ үү?">
+												<label>Явах эд ангийн дугаар</label>
+												<input type="text" name="cedangi" class="input" placeholder="Чиргүүлний дугаараа оруулна уу?">
+												<label>Худалдааны тэмдэг эсвэл үйлдвэрлэгчийн нэр</label>
+												<input type="text" name="cmadename" class="input" placeholder="Худалдааны тэмдэг эсвэл үйлдвэрлэгчийн нэр оруулна уу?">
+												<label>Сефтиркатын дугаар</label>
+												<input type="text" name="ccefno" class="input" placeholder="Олгосон Сефтиркатын дугаарыг бичнэ үү">
+												<label>Гэрчилгээний зургийг хавсаргана уу? PDF байж болно.</label>
+												<input type="file" id="cimg" name="cimg" class="image">				
 												<input type="submit" value="Илгээх">
 											</form>
 										</div>
